--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="main.css">
 <title> Postogon Save Settings </title>
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
 </head>
 
 <body>
